Fix text overflow effect

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -12,6 +12,7 @@
     &.overflow-effect {
       position: relative;
       text-overflow: clip;
+      white-space: nowrap;
       &:after {
         content: "";
         display: block;
